kubernetes-ms10-demo1/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms10demo-gateway
  namespace: msten-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
