kubernetes-ms10-demo1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms10-demo1
  namespace: msten-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms10
  template:
    metadata:
      labels:
        app: ms10
    spec:
      containers:
        - name: ms10-demo1-container
          image: emn503/ms10-demo1:arm
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ms10-demo1-svc
  namespace: msten-demo
  labels:
    app: ms10
spec:
  selector:
    app: ms10
  ports:
    - protocol: TCP
      port: 8080
      name: http
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-ingress-msten-demoone
  namespace: msten-demo
spec:
  hosts:
  - "*"
  gateways:
  - ms10demo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          host: ms10-demo1-svc
