kubernetes-ms10-demo1/istioconfig.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms10-demo1-vs
  namespace: msten-prod
spec:
  hosts:
  - "ms10-demo1.ms10.svc.cluster.local"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: ms10-demo1.ms10.svc.cluster.local
        port:
          number: 80
